test/tests/stages/8_loops/valid/extra_credit/switch_nested_switch.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[58]:
  int
  identifier(main)
  (
  void
  )
  {
  switch
  (
  const int(3)
  )
  {
  case
  const int(0)
  :
  return
  const int(0)
  ;
  case
  const int(3)
  :
  {
  switch
  (
  const int(4)
  )
  {
  case
  const int(3)
  :
  return
  const int(0)
  ;
  case
  const int(4)
  :
  return
  const int(1)
  ;
  default
  :
  return
  const int(0)
  ;
  }
  }
  case
  const int(4)
  :
  return
  const int(0)
  ;
  default
  :
  return
  const int(0)
  ;
  }
  }
