test/tests/stages/8_loops/invalid_parse/extra_credit/switch_case_declaration.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  int
  identifier(main)
  (
  void
  )
  {
  switch
  (
  const int(3)
  )
  {
  case
  const int(3)
  :
  int
  identifier(i)
  =
  const int(0)
  ;
  return
  identifier(i)
  ;
  }
  return
  const int(0)
  ;
  }
